# arcade

./: .env  .gitignore  SUPABASE_SETUP.md  game_spec.md  hex_interactions.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/api/analytics/: route.ts
app/arcade/: page.module.css  page.tsx
app/arcade/gyrii/: page.tsx
app/arcade/hexii/: page.module.css  page.tsx
app/arcade/rocket-to-heaven/: page.tsx
components/auth/: AuthModal.module.css  AuthModal.tsx  UserMenu.module.css  UserMenu.tsx
components/game/: GameHeader.tsx
games/gyrii/: SPACETIME_PHYSICS.md
games/gyrii/spacetimedb/spacetime_rapier/: Cargo.toml
games/gyrii/spacetimedb/spacetime_rapier/src/: lib.rs
games/gyrii/spacetimedb/spacetime_rapier/src/engine/: mod.rs  world_2d.rs  world_3d.rs
games/gyrii/spacetimedb/spacetime_rapier/src/math/: mod.rs  quat.rs  vec2.rs  vec3.rs
games/gyrii/spacetimedb/spacetime_rapier/src/queries/: mod.rs
games/gyrii/spacetimedb/spacetime_rapier/src/tables/: collider.rs  mod.rs  physics_world.rs  properties.rs  raycast.rs  rigid_body.rs  trigger.rs
games/rocket-to-heaven/: README.md
lib/audio/: MusicManager.ts
lib/supabase/: admin.ts  auth-context.tsx
lib/utils/: mobile-detector.ts
scripts/: README.md  generate-mesh.ts  generate-sfx.ts  generate-soundtrack.ts  upload-post-docs.md  upload-post.ts
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql  002_realtime_presence.sql  003_remove_wave_level_from_scores.sql
(+146 files in other folders)
